onetime-secret-deployment.yaml
# onetime-secret-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onetime-secret
spec:
  replicas: 1
  selector:
    matchLabels:
      app: onetime-secret
  template:
    metadata:
      labels:
        app: onetime-secret
    spec:
      containers:
#      - name: pre-init-container
#        image: ruby:2.7
#        command: ["/bin/sh", "-c"]
#        args:
#        - gem install syslog base64
#        volumeMounts:
#        - name: shared-volume
#          mountPath: /gems
      - name: onetime-secret
        image: dismantl/onetimesecret:latest
        ports:
        - containerPort: 7143
        volumeMounts:
        - name: shared-volume
          mountPath: /gems
      volumes:
      - name: shared-volume
        emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: onetime-secret
spec:
  selector:
    app: onetime-secret
  ports:
    - protocol: TCP
      port: 7143
      targetPort: 7143
