plik-deployment.yaml
# plik-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plik
  template:
    metadata:
      labels:
        app: plik
    spec:
      containers:
      - name: plik
        image: rootgg/plik:latest
        ports:
        - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: plik
spec:
  selector:
    app: plik
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
