ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Redirect HTTP to HTTPS
spec:
  tls:
  - hosts:
    - cert.ejbca.com
    - plik.example.com
    - wiki.example.com
    - onetime.example.com
    secretName: <secret-name>  # Use the same secret name created earlier
  rules:
  - host: cert.ejbca.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ejbca-ce
            port:
              number: 80
  - host: plik.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plik
            port:
              number: 80
  - host: wiki.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wikijs
            port:
              number: 80
  - host: onetime.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: onetime-secret
            port:
              number: 80
